k8s_apache/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-webserver
  labels:
    app: apache-webserver
spec:
  replicas: 4 
  selector:
    matchLabels:
      app: apache-webserver
  template:
    metadata:
      labels:
        app: apache-webserver
    spec:
      containers:
      - name: apache
        image: j123qwe/apache-k8s:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      nodeSelector:
        nodeType: utility
