k8s_apache/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-webserver
spec:
  selector:
    app: apache-webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
