k8s_apache/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-webserver-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx" # Ensure this matches your NGINX Ingress setup
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ha.gogo.yoducks.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apache-webserver
            port:
              number: 80
